--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+
+img{
+    height:100px;
+}
+
 *
 {
-    color: slategrey;
+    color: white;
     font-family: sans-serif;
+    background-color: rgb(26, 26, 26);
 }
 
 .header
@@ -15,8 +21,9 @@ img
 {
     height: 150px;
     width: 500px;
-    padding-left: 100px;
-    padding-top: 150px;
+    margin-left: 100px;
+    margin-top: 140px;
+    margin-bottom: 50px;
     
 }
 .header a
@@ -24,7 +31,7 @@ img
     display: flex;
     flex-direction: row;
     padding: 20px;
-    color: rgb(90, 89, 89);
+    color:white;
 }
 
 a:link {
@@ -46,32 +53,9 @@ a:active {
     text-decoration: none;
      
   }
-input[type=search]
-{
-    margin-left: 50px;
-    margin-top: 50px;
-    width: 700px;
-    height: 60px;
-    border-radius: 30px 30px 30px 30px;
-    padding-left: 30px;
-    padding-right: 40px;
-    font-size: x-large;
-    color: black;
-    font-weight:200;
-}
-input[type=search]:hover
-{
-    box-shadow: 0px 2px 2px 2px rgb(134, 134, 134);
-
-}
-input[type=search]:focus
-{
-    border:1px solid slategrey;
-
-}
 .header3 a
 {
-    color: blue;
+    color: rgb(43, 116, 252);
     padding-left: 10px;
 }
 .header3 a:hover {
@@ -83,7 +67,7 @@ input[type=search]:focus
     padding-left: 40px;
     display: flex;
     flex-direction: row;
-    color: slategrey;
+    color: white;
 }
 .footer
 {
@@ -97,7 +81,7 @@ input[type=search]:focus
     font-size: 20px; 
     padding: left 2px;
     padding-right: 50px;
-    margin-left: 10px;
+    margin-left: 40px;
     
 }
 .footer a:hover 
@@ -112,19 +96,17 @@ input[type=search]:focus
 {
     color: rgb(90, 89, 89);
     font-size: 20px; 
-    padding-left: 100px;
+    padding-left: 150px;
+
     padding-bottom: 40px;
-    
-
 }
-
 
 input[type=button]
 {
-    color: rgb(66, 66, 66);
+    color: white;
     font-size: 20px;
     margin-top: 60px;
-    margin-left: 100px;
+    margin-left: 50px;
     margin-bottom: 80px;
     height: 50px;
     width: 200px;
@@ -138,4 +120,59 @@ input[type=button]:hover
     border-radius: 10px; 
 }
 
+.border
+{
+    box-sizing: border-box;
+    width: 650px;
+    height: 40px;
+    border-radius: 20px 20px 20px 20px;
+    border: 1px solid slategray;
+    padding-left: 20px;
+    padding-top: 4px;
+    border-bottom: 1px solid;  
+    
+}
+.border:hover
+{
+    box-shadow: 0.5px 0.5px 0.5px 0.5px rgb(134, 134, 134);
+}
 
+.header2
+{
+    padding-left: 100px;
+    
+}
+input[type=search]
+{
+    color: black;
+    width: 500px;
+    height: 30px;
+    padding-left: 20px;
+    outline: none;
+    border: none;
+    
+    
+}
+
+
+    .footer a
+    {
+        
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+@media screen and  (min-width:900px) {
+
+    .footer2
+    {
+    
+       float: right;
+       
+       padding-right: 20px;
+    
+    }
+}
+
+#mike{
+    padding-left: 60px;
+}
